feat: Version 0.0.1